# ingest-demo-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust-ci.yml
examples/: test_gen.json
src/: generator.rs  ingestion.rs  lib.rs  model.rs  model_test.rs
