[package]
name = "ingest-demo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "= 0.4", features = ["serde"] } # This side steps the issue caused by chrono's 0.4.40 release
rand = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
polars = { version = "0.51", features = ["parquet"] }
parquet = "56.0"
arrow = "57.0"
arrow-schema = "56.0"
arrow-json = "57.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "ingest-demo"
path = "src/bin/main.rs"
